fix issue on tinymce toolbar overlap

--- a/public/css/melis_tinymce.css
+++ b/public/css/melis_tinymce.css
@@ -25,3 +25,10 @@ img {
 .melis-cms-plugin-snippets img {
     max-width: 100%;
 }
+/* fix: tinymce toolbar overlaps and gets behind the .header_area */
+.tox-tinymce-inline,
+.tox-tinymce-inline .tox-editor-header,
+.tox-tinymce-inline .tox-editor-header .tox-toolbar__primary{
+    position: relative;
+    z-index: 1100;
+}
